--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                             Product Design
                                         </div>
                                         <div class="folio-list__item-title">
-                                            The White Lamp.
+                                            The Resturant Web.
                                         </div>
                                     </div>
                                 </a>
