added portfolio images

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                             <li class="folio-list__item column" data-animate-el>
                                 <a class="folio-list__item-link" href="#modal-01">
                                     <div class="folio-list__item-pic">
-                                        <img src="images/portfolio/music.png" 
-                                             srcset="images/portfolio/music.png 1x, images/portfolio/fuji@2x.png 2x"  alt="">
+                                        <img src="images/portfolio/600x650.png" 
+                                             srcset="images/portfolio/600x650.png 1x, images/portfolio/1200x1300.png 2x"  alt="">
                                     </div>
                                     
                                     <div class="folio-list__item-text">
@@ -432,7 +432,7 @@
                     -------------------------------------------- -->
                     <div id="modal-01" hidden>
                         <div class="modal-popup">
-                            <img src="images/portfolio/music.png" alt="">
+                            <img src="images/portfolio/gallery/2100x1400.png" alt="">
                 
                             <div class="modal-popup__desc">
                                 <h5>React Music Player</h5>
