--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Jan 2024</span> 
+                    <span>© Copyright Jan <script>document.write(new Date().getFullYear())</script></span> 
                 <!--    <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span> -->
                 </div>
             -
